# pyScraper

./: README.md  pyproject.toml
src/: main.py  scraper.py
